--- a/src/features/webCli/styles/cli.css
+++ b/src/features/webCli/styles/cli.css
@@ -1,8 +1,8 @@
 .cli {
   position: absolute;
   overflow: auto;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-position: center center;
   background-color: #000000;
   color: #FFFFFF; 
